tests/bad/tc5041-special_char_in_sub_clas.vtt
WEBVTT

00:11.000 --> 00:13.000
We <i.&amp;>are</i> in New York City